CAY-2576 Ant cgen task is broken
CAY-2577 Between property with extended type failure
CAY-2578 Wrong bindings in select of related entity by compound FK
CAY-2580 Cgen: Can't use custom templates for client mode
CAY-2582 Double insert of manyToMany relationship mapped to Set
CAY-2584 Crypto: can't use ColumnSelect with encrypted columns
CAY-2588 IdRowReader: ArrayIndexOutOfBoundsException
CAY-2594 DbImport: AutoAdapter resolving inside an import operation hangs up the op on Hana DB
CAY-2595 ObjAttributes are not sorted in alphabetical ordering on save

----------------------------------
Release: 4.1.B1
Date: March 7, 2019
----------------------------------
Changes/New Features:

CAY-2446 Run Disjoint By Id queries outside of synchronized block
CAY-2447 Crypto support for LocalDateTime
CAY-2471 Support multiple XML project versions
CAY-2473 Modeler: cleanup attributes and relationship editors
CAY-2474 Modeler: swap buttons in dialog toolbar
CAY-2475 Modeler: move inheritance icon to name column in objAttr table and objRel table
CAY-2478 cgen: Generate properties for PK
CAY-2481 Support for Object[] as return type in SQLTemplate and SQLExec
CAY-2485 Compact Slf4j Logger
CAY-2487 Removed usage of CayenneException.
CAY-2489 Add validation to the case of not to PK relationships
CAY-2491 Remaster Db Import View
CAY-2493 Save cgen configuration with datamap XML
CAY-2494 Rename dbImport tag from 'config' to 'dbImport'
CAY-2499 Support for COUNT(DISTINCT(column)) function aggregate
CAY-2514 Set SERVER_CONTEXTS_SYNC_PROPERTY default value to false

Bug Fixes:

CAY-2320 Modeler: Limit input into numeric fields to 10 digits
CAY-2444 Change URI from http:// to https:// in xsi:schemaLocation
CAY-2445 Oracle: Problem with ExpressionFactory.notInExp()
CAY-2449 Modeler: Needless scrollbar in Generate DB Schema result menu
CAY-2450 Modeler: Impossible to update Attribute title after syncing ObjEntity
CAY-2451 Modeler: ObjEntity "Edit" button doesn't open editor for Relationship