@@ -412,6 +412,10 @@ specifier|private
 name|ProjectController
 name|projectController
 decl_stmt|;
+specifier|private
+name|boolean
+name|initFromModel
+decl_stmt|;
 specifier|public
 name|DbImportView
 parameter_list|(
@@ -424,6 +428,12 @@ operator|.
 name|projectController
 operator|=
 name|projectController
+expr_stmt|;
+name|this
+operator|.
+name|initFromModel
+operator|=
+literal|false
 expr_stmt|;
 name|initFormElements
 argument_list|()
@@ -1257,6 +1267,8 @@ operator|new
 name|ReverseEngineeringConfigPanel
 argument_list|(
 name|projectController
+argument_list|,
+name|this
 argument_list|)
 expr_stmt|;
 name|configPanel
@@ -1308,6 +1320,10 @@ operator|!=
 literal|null
 condition|)
 block|{
+name|initFromModel
+operator|=
+literal|true
+expr_stmt|;
 name|treeToolbar
 operator|.
 name|unlockButtons
@@ -1450,6 +1466,10 @@ literal|false
 argument_list|)
 expr_stmt|;
 block|}
+name|initFromModel
+operator|=
+literal|false
+expr_stmt|;
 block|}
 specifier|public
 name|boolean
@@ -1662,6 +1682,15 @@ parameter_list|()
 block|{
 return|return
 name|loadDbSchemaButton
+return|;
+block|}
+specifier|public
+name|boolean
+name|isInitFromModel
+parameter_list|()
+block|{
+return|return
+name|initFromModel
 return|;
 block|}
 block|}
