@@ -289,10 +289,17 @@ specifier|private
 name|ProjectController
 name|projectController
 decl_stmt|;
+specifier|private
+name|DbImportView
+name|dbImportView
+decl_stmt|;
 name|ReverseEngineeringConfigPanel
 parameter_list|(
 name|ProjectController
 name|projectController
+parameter_list|,
+name|DbImportView
+name|dbImportView
 parameter_list|)
 block|{
 name|this
@@ -300,6 +307,12 @@ operator|.
 name|projectController
 operator|=
 name|projectController
+expr_stmt|;
+name|this
+operator|.
+name|dbImportView
+operator|=
+name|dbImportView
 expr_stmt|;
 name|initFormElements
 argument_list|()
@@ -682,6 +695,15 @@ argument_list|(
 name|text
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+operator|!
+name|dbImportView
+operator|.
+name|isInitFromModel
+argument_list|()
+condition|)
+block|{
 name|projectController
 operator|.
 name|setDirty
@@ -689,6 +711,7 @@ argument_list|(
 literal|true
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 block|}
 expr_stmt|;
@@ -732,6 +755,15 @@ argument_list|(
 name|text
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+operator|!
+name|dbImportView
+operator|.
+name|isInitFromModel
+argument_list|()
+condition|)
+block|{
 name|projectController
 operator|.
 name|setDirty
@@ -739,6 +771,7 @@ argument_list|(
 literal|true
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 block|}
 expr_stmt|;
@@ -854,6 +887,15 @@ name|isSelected
 argument_list|()
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+operator|!
+name|dbImportView
+operator|.
+name|isInitFromModel
+argument_list|()
+condition|)
+block|{
 name|projectController
 operator|.
 name|setDirty
@@ -861,6 +903,7 @@ argument_list|(
 literal|true
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 argument_list|)
 expr_stmt|;
@@ -882,6 +925,15 @@ name|isSelected
 argument_list|()
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+operator|!
+name|dbImportView
+operator|.
+name|isInitFromModel
+argument_list|()
+condition|)
+block|{
 name|projectController
 operator|.
 name|setDirty
@@ -889,6 +941,7 @@ argument_list|(
 literal|true
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 argument_list|)
 expr_stmt|;
@@ -910,6 +963,15 @@ name|isSelected
 argument_list|()
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+operator|!
+name|dbImportView
+operator|.
+name|isInitFromModel
+argument_list|()
+condition|)
+block|{
 name|projectController
 operator|.
 name|setDirty
@@ -917,6 +979,7 @@ argument_list|(
 literal|true
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 argument_list|)
 expr_stmt|;
@@ -938,6 +1001,15 @@ name|isSelected
 argument_list|()
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+operator|!
+name|dbImportView
+operator|.
+name|isInitFromModel
+argument_list|()
+condition|)
+block|{
 name|projectController
 operator|.
 name|setDirty
@@ -945,6 +1017,7 @@ argument_list|(
 literal|true
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 argument_list|)
 expr_stmt|;
@@ -966,6 +1039,15 @@ name|isSelected
 argument_list|()
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+operator|!
+name|dbImportView
+operator|.
+name|isInitFromModel
+argument_list|()
+condition|)
+block|{
 name|projectController
 operator|.
 name|setDirty
@@ -973,6 +1055,7 @@ argument_list|(
 literal|true
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 argument_list|)
 expr_stmt|;
@@ -994,6 +1077,15 @@ name|isSelected
 argument_list|()
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+operator|!
+name|dbImportView
+operator|.
+name|isInitFromModel
+argument_list|()
+condition|)
+block|{
 name|projectController
 operator|.
 name|setDirty
@@ -1001,6 +1093,7 @@ argument_list|(
 literal|true
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 argument_list|)
 expr_stmt|;
@@ -1050,6 +1143,15 @@ argument_list|(
 name|strategy
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+operator|!
+name|dbImportView
+operator|.
+name|isInitFromModel
+argument_list|()
+condition|)
+block|{
 name|projectController
 operator|.
 name|setDirty
@@ -1057,6 +1159,7 @@ argument_list|(
 literal|true
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 argument_list|)
 expr_stmt|;
